prepares for branch

--- a/views/new_game_21.erb
+++ b/views/new_game_21.erb
@@ -1,6 +1,9 @@
 Player 1, please position your ships!
 <form method="post">
-  <input type="text" name="sub_coords">
-  <input type="text" name="sub_dir">
+  Submarine co-ordinates: <input type="text" name="sub_coords"> Submarine direction: <input type="text" name="sub_dir">
+  Battleship co-ordinates: <input type="text" name="battleship_coords"> Battleship direction: <input type="text" name="battleship_dir">
+  Carrier co-ordinates: <input type="text" name="carrier_coords"> Carrier direction: <input type="text" name="carrier_dir">
+  Destroyer co-ordinates: <input type="text" name="destroyer_coords"> Destroyer direction: <input type="text" name="destroyer_dir">
+  Cruiser co-ordinates: <input type="text" name="cruiser_coords"> Cruiser direction: <input type="text" name="cruiser_dir">
   <input type="submit" value="Submit">
 </form>
